# claude-checkpoint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SKILL.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  gitleaks.yml  release.yml
commands/: checkpoint.md  restore.md
scripts/: extract-messages.sh
src/: extract.rs  main.rs  session.rs  types.rs
